# PyTorch-Plugin-FL

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  pyproject.toml  setup.py
csrc/: CMakeLists.txt  __init__.py
csrc/aten/: abs.cc  abs.h  acos.cc  acos.h  add.cc  add.h  add_inplace.cc  add_inplace.h  all.cc  all.h  argmax.cc  argmax.h  bitwise_and.cc  bitwise_and.h  bmm.cc  bmm.h  cat.cc  cat.h  common.cc  common.h  constant_pad_nd.cc  constant_pad_nd.h  contiguous_ops.cc  contiguous_ops.h  copy_dispatcher.h  copy_ops.cc  copy_ops.h  copy_stub.h  cos.cc  cos.h  device_boxing.h  dispatch_stub.h  dispatcher.h  div_scalar.cc  div_scalar.h  embedding.cc  embedding.h  embedding_dense_backward.cc  embedding_dense_backward.h  empty.cc  (+61 more)
csrc/aten/backends/ascend/: abs.cc  acos.cc  add.cc  all.cc  bitwise_and.cc  bmm.cc  cat.cc  constant_pad_nd.cc  cos.cc  div_scalar.cc  embedding.cc  embedding_dense_backward.cc  index.cc  le.cc  mean.cc  mm.cc  mul.cc  mul_scalar.cc  neg.cc  new_ones.cc  nll_loss.cc  ones_like.cc  op_api_common.h  pow.cc  rsqrt.cc  scalar_tensor.cc  silu.cc  silu_backward.cc  sin.cc  slice_backward.cc  softmax.cc  sum.cc  where.cc  zeros.cc
csrc/aten/backends/cuda/: abs.cc  acos.cc  add.cu  add_inplace.cu  all.cu  argmax.cc  bitwise_and.cu  bmm.cc  cat.cc  constant_pad_nd.cc  copy_factory_ops.cc  cos.cu  div_scalar.cc  div_scalar.cu  embedding.cc  embedding_dense_backward.cc  foreach_ops.cc  index.cc  le.cu  log_softmax.cc  mean.cu  mm.cc  mul.cu  mul_scalar.cu  multinomial.cc  neg.cu  new_ones.cc  nll_loss.cc  ones_like.cc  pow.cu  rsqrt.cu  scalar_tensor.cc  silu.cu  silu_backward.cu  sin.cu  slice_backward.cc  softmax.cc  sort.cc  sum.cu  topk.cc  (+2 more)
csrc/aten/backends/flaggems/: bmm.cc  embedding.cc  softmax.cc
csrc/aten/backends/flagos/: bmm.cc  cat.cc  embedding.cc  mm.cc  python_abs.cc  python_acos.cc  python_add.cc  python_all.cc  python_bitwise_and.cc  python_bmm.cc  python_cat.cc  python_constant_pad_nd.cc  python_cos.cc  python_div_scalar.cc  python_embedding.cc  python_embedding_dense_backward.cc  python_index.cc  python_le.cc  python_mean.cc  python_mm.cc  python_mul.cc  python_mul_scalar.cc  python_neg.cc  python_new_ones.cc  python_nll_loss.cc  python_ones_like.cc  python_op_caller.cc  python_op_caller.h  python_pow.cc  python_rsqrt.cc  python_scalar_tensor.cc  python_silu.cc  python_silu_backward.cc  python_sin.cc  python_slice_backward.cc  python_softmax.cc  python_sum.cc  python_where.cc  python_zeros.cc  softmax.cc
csrc/aten/backends/flagos/py/: mean.cc  pow.cc  sum.cc
csrc/aten/backends/flagos/python_wrapper/: abs.cc  acos.cc  add.cc  all.cc  bitwise_and.cc  bmm.cc  cat.cc  constant_pad_nd.cc  cos.cc  div_scalar.cc  embedding.cc  embedding_dense_backward.cc  index.cc  le.cc  mean.cc  mm.cc  mul.cc  mul_scalar.cc  neg.cc  nll_loss.cc  pow.cc  rsqrt.cc  silu.cc  silu_backward.cc  sin.cc  slice_backward.cc  softmax.cc  sum.cc  where.cc
csrc/aten/backends/maca/: add.cu  add_kernel.cuh  all.cu  all_kernel.cuh  le.cu  le_kernel.cuh  maca_elementwise.cuh  mul.cu  mul_kernel.cuh
csrc/aten/backends/metax/: abs.cu  abs_kernel.cuh  add.cu  add_kernel.cuh  all.cu  all_kernel.cuh  bitwise_and.cu  bitwise_and_kernel.cuh  bmm.cu  bmm_kernel.cuh  cat.cc  constant_pad_nd.cc  copy_factory_ops.cc  cos.cu  cos_kernel.cuh  embedding.cu  embedding_dense_backward.cc  embedding_kernel.cuh  index.cc  le.cu  le_kernel.cuh  mean.cu  mean_kernel.cuh  metax_elementwise.cuh  mm.cu  mm_kernel.cuh  mul.cu  mul_kernel.cuh  neg.cu  neg_kernel.cuh  new_ones.cc  nll_loss.cc  ones_like.cu  ones_like_kernel.cuh  pow.cu  pow_kernel.cuh  rsqrt.cu  rsqrt_kernel.cuh  scalar_tensor.cc  silu.cu  (+12 more)
csrc/aten/backends/vendors/cuda/: add.cu  all.cu  bitwise_and.cu  bmm.cc  cat.cc  constant_pad_nd.cc  cos.cu  embedding.cc  (+23 more)
csrc/aten/cuda/: add.cu  all.cu  bitwise_and.cu  bmm.cc  cat.cc  constant_pad_nd.cc  cos.cu  div_scalar.cu  embedding.cc  embedding_dense_backward.cc  index.cc  le.cu  mean.cu  mm.cc  mul.cu  mul_scalar.cu  neg.cu  new_ones.cc  nll_loss.cc  ones_like.cc  pow.cu  rsqrt.cu  scalar_tensor.cc  silu.cu  silu_backward.cu  sin.cu  slice_backward.cc  softmax.cc  sum.cu  where.cu  zeros.cc
csrc/aten/factory/: contiguous_ops.cc  contiguous_ops.h  copy_ops.cc  copy_ops.h  empty.cc  empty.h  fallback.h  set_ops.h  strided_ops.h
csrc/aten/factory_ops/: copy_ops.cc
csrc/aten/flaggems/: bmm.cc  cat.cc  embedding.cc  mm.cc  softmax.cc
csrc/aten/functional/: add.cc  all.h  bmm.cc  cat.cc  constant_pad_nd.h  div_scalar.h  embedding_dense_backward.h  index.cc  le.h  mean.h  mul_scalar.h  ones_like.h  pow.h  scalar_tensor.h  slice_backward.h
csrc/aten/functional_ops/: add.cu  add.h  add_stub.cu  all.cu  all_stub.cu  bitwise_and.cu  bitwise_and.h  bitwise_and_stub.cu  bmm.cc  bmm.h  bmm_stub.cc  cat.cc  cat.h  cat_stub.cc  constant_pad_nd.cc  cos.cu  cos_stub.cu  cos_stub.h  div_scalar.cu  div_scalar_stub.cu  embedding.cc  embedding.h  embedding_dense_backward.cc  embedding_stub.cc  index.cc  index_stub.cc  index_stub.h  le.cu  le_stub.cu  mean.cu  mean_stub.cu  mm.cc  mm.h  mm_stub.cc  mul.cu  mul.h  mul_scalar.cu  mul_scalar_stub.cu  mul_stub.cu  neg.cu  (+38 more)
csrc/aten/npu_adapter/: op_api_common.h
csrc/runtime/: __init__.py  device_allocator.cc  device_allocator.h  exception.h  flagos_stream_api.cc  functions.cc  functions.h  generator.cc  generator.h  guard.cc  guard.h  hooks.cc  hooks.h  host_allocator.cc  host_allocator.h
csrc/runtime/accelerator/: CMakeLists.txt
csrc/runtime/accelerator/ascend/: acl_stream.h  device.cc  memory.cc  stream.cc  stream_api.cc
csrc/runtime/accelerator/cuda/: device.cc  memory.cc  stream.cc
csrc/runtime/accelerator/metax/: cudart_shim.c  device.cc  memory.cc  stream.cc
csrc/runtime/accelerator/npu/: device.cc
csrc/runtime/accelerator/tsingmicro/: device.cc  memory.cc  stream.cc
csrc/runtime/allocator/: CMakeLists.txt  block.h  caching_device_allocator.cc  caching_device_allocator.h  device_memory_interface.h
csrc/runtime/allocator/backends/: cuda_memory.h  tsingmicro_memory.h
torch_fl/csrc/: CMakeLists.txt  module.cc  stub.c
(+111 files in other folders)
