[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.18", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_fl"
version = "0.1.0"
description = "FlagGems operators as a custom PyTorch device (flagos)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "FlagGems Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["torch_fl*", "accelerator*", "csrc.runtime.accelerator*"]

# Native libs (libtorch_fl.so) are built via setup.py cmdclass; editable install must
# run build_ext — see EditableWheelWithCmake in setup.py.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["."]
