# Copyright 2026 FlagOS Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.18", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_fl"
version = "0.1.0"
description = "FlagGems operators as a custom PyTorch device (flagos)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "FlagGems Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["torch_fl*", "accelerator*", "csrc.runtime.accelerator*"]

# Native libs (libtorch_fl.so) are built via setup.py cmdclass; editable install must
# run build_ext — see EditableWheelWithCmake in setup.py.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["."]
